crates/snapshot-tests/tests/snapshots/parser__bad_floats__underscore_before_exp.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[InvalidFloat]: invalid float: underscores must be between two digits at `a`
  ┌─ underscore_before_exp:1:5
  │
1 │ a = 73_e3
  │     ^^^^^ invalid float: underscores must be between two digits


error: invalid float: underscores must be between two digits at `a`
 --> underscore_before_exp:1:5
  |
1 | a = 73_e3
  |     ^^^^^ invalid float: underscores must be between two digits
Error {
    kind: "InvalidFloat",
    message: "invalid float: underscores must be between two digits",
    span: 4..9,
    path: Some(
        "a",
    ),
}
